--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -6,32 +6,32 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.2",
-        "symfony/asset": "4.1.0",
+        "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
         "symfony/flex": "^1.1",
-        "symfony/form": "4.1.0",
-        "symfony/framework-bundle": "4.1.0",
+        "symfony/form": "*",
+        "symfony/framework-bundle": "*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
-        "symfony/process": "4.1.0",
-        "symfony/security-bundle": "4.1.0",
+        "symfony/process": "*",
+        "symfony/security-bundle": "*",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "^4.1.0",
-        "symfony/twig-bundle": "4.1.0",
-        "symfony/validator": "4.1.0",
-        "symfony/web-link": "4.1.0",
-        "symfony/yaml": "4.1.0"
+        "symfony/translation": "*",
+        "symfony/twig-bundle": "*",
+        "symfony/validator": "*",
+        "symfony/web-link": "*",
+        "symfony/yaml": "*"
     },
     "require-dev": {
         "sensiolabs/security-checker": "^5.0",
         "symfony/debug-pack": "*",
-        "symfony/dotenv": "4.1.0",
+        "symfony/dotenv": "*",
         "symfony/maker-bundle": "^1.8",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "4.1.0"
+        "symfony/web-server-bundle": "*"
     },
     "config": {
         "preferred-install": {
