--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -22,7 +22,11 @@
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
         "symfony/web-link": "*",
-        "symfony/yaml": "*"
+        "symfony/yaml": "*",
+        "friendsofsymfony/rest-bundle": "^2.4",
+        "lexik/jwt-authentication-bundle": "^2.5",
+        "nelmio/api-doc-bundle": "^3.3",
+        "sunra/php-simple-html-dom-parser": "^1.5"
     },
     "require-dev": {
         "sensiolabs/security-checker": "^5.0",
