--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^7.0.4",
     "@angular/router": "^7.0.4",
     "core-js": "^2.5.4",
+    "npm": "^6.4.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
