--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -5,7 +5,12 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
+        "friendsofsymfony/rest-bundle": "^2.4",
+        "lexik/jwt-authentication-bundle": "^2.5",
+        "nelmio/api-doc-bundle": "^3.3",
         "sensio/framework-extra-bundle": "^5.2",
+        "sunra/php-simple-html-dom-parser": "^1.5",
         "symfony/asset": "*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
@@ -15,20 +20,17 @@
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
         "symfony/process": "*",
-        "symfony/security-bundle": "*",
+        "symfony/security-bundle": "4.1.*",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/translation": "*",
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
         "symfony/web-link": "*",
-        "symfony/yaml": "*",
-        "friendsofsymfony/rest-bundle": "^2.4",
-        "lexik/jwt-authentication-bundle": "^2.5",
-        "nelmio/api-doc-bundle": "^3.3",
-        "sunra/php-simple-html-dom-parser": "^1.5"
+        "symfony/yaml": "*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "sensiolabs/security-checker": "^5.0",
         "symfony/debug-pack": "*",
         "symfony/dotenv": "*",
