--- a/Backend/config/packages/security.yaml
+++ b/Backend/config/packages/security.yaml
@@ -2,12 +2,18 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     encoders:
         App\Entity\User:
-            algorithm: bcrypt
+            algorithm: argon2i
+
     providers:
         entity_provider:
             entity:
                 class: App\Entity\User
-                property: Email
+                property: username
+        # used to reload user from session & other features (e.g. switch_user)
+#        app_user_provider:
+#            entity:
+#                class: App\Entity\User
+#                property: username
     firewalls:
         login:
             pattern:  ^/api/login
@@ -33,22 +39,12 @@ security:
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-        main:
-            anonymous: true
+#        dev:
+#            pattern: ^/(_(profiler|wdt)|css|images|js)/
+#            security: false
+#        main:
+#            anonymous: true
 
-              # activate different ways to authenticate
-
-              # http_basic: true
-              # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-
-              # form_login: true
-            # https://symfony.com/doc/current/security/form_login_setup.html
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
