--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -26,7 +26,8 @@
         "friendsofsymfony/rest-bundle": "^2.4",
         "lexik/jwt-authentication-bundle": "^2.5",
         "nelmio/api-doc-bundle": "^3.3",
-        "sunra/php-simple-html-dom-parser": "^1.5"
+        "sunra/php-simple-html-dom-parser": "^1.5",
+      "ext-json": "*"
     },
     "require-dev": {
         "sensiolabs/security-checker": "^5.0",
