--- a/Backend/config/packages/security.yaml
+++ b/Backend/config/packages/security.yaml
@@ -7,7 +7,7 @@ security:
         entity_provider:
             entity:
                 class: App\Entity\User
-                property: Email
+                property: username
     firewalls:
         login:
             pattern:  ^/api/login
@@ -33,11 +33,11 @@ security:
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-        main:
-            anonymous: true
+#        dev:
+#            pattern: ^/(_(profiler|wdt)|css|images|js)/
+#            security: false
+#        main:
+#            anonymous: true
 
               # activate different ways to authenticate
 
