--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -23,6 +23,9 @@
               "src/assets"
             ],
             "styles": [
+              {
+                "input":"src/jail-theme.scss"
+              },
               "src/styles.css"
             ],
             "scripts": []
