--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -5,38 +5,44 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "sensio/framework-extra-bundle": "^5.2",
-        "symfony/asset": "*",
-        "symfony/console": "*",
-        "symfony/expression-language": "*",
-        "symfony/flex": "^1.1",
-        "symfony/form": "*",
-        "symfony/framework-bundle": "*",
-        "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "*",
-        "symfony/process": "*",
-        "symfony/security-bundle": "*",
-        "symfony/serializer-pack": "*",
-        "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "*",
-        "symfony/twig-bundle": "*",
-        "symfony/validator": "*",
-        "symfony/web-link": "*",
-        "symfony/yaml": "*",
-        "friendsofsymfony/rest-bundle": "^2.4",
-        "lexik/jwt-authentication-bundle": "^2.5",
-        "nelmio/api-doc-bundle": "^3.3",
-        "sunra/php-simple-html-dom-parser": "^1.5",
-      "ext-json": "*"
+        "sensio/framework-extra-bundle": "^5.2.4",
+        "symfony/asset": "^4.2.2",
+        "symfony/browser-kit": "^4.2.2",
+        "symfony/cache": "^4.2.2",
+        "symfony/config": "^4.2.2",
+        "symfony/console": "^4.2.2",
+        "symfony/dependency-injection": "^4.2.2",
+        "symfony/expression-language": "^4.2.2",
+        "symfony/flex": "^1.1.8",
+        "symfony/form": "^4.2.2",
+        "symfony/framework-bundle": "^4.2.2",
+        "symfony/monolog-bundle": "^3.3.1",
+        "symfony/orm-pack": "^1.0.6",
+        "symfony/process": "^4.2.2",
+        "symfony/security-bundle": "^4.2.2",
+        "symfony/serializer": "^4.2.2",
+        "symfony/serializer-pack": "^1.0",
+        "symfony/swiftmailer-bundle": "^3.2.2",
+        "symfony/translation": "^4.2.2",
+        "symfony/twig-bundle": "^4.2.2",
+        "symfony/validator": "^4.2.2",
+        "symfony/web-link": "^4.2.2",
+        "symfony/yaml": "^4.2.2",
+        "friendsofsymfony/rest-bundle": "^2.5.0",
+        "lexik/jwt-authentication-bundle": "^2.6.1",
+        "nelmio/api-doc-bundle": "^3.3.1",
+        "sunra/php-simple-html-dom-parser": "^1.5.2",
+        "ext-json": "*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
         "sensiolabs/security-checker": "^5.0",
-        "symfony/debug-pack": "*",
-        "symfony/dotenv": "*",
-        "symfony/maker-bundle": "^1.8",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "*"
+        "symfony/debug-pack": "^1.0.7",
+        "symfony/dotenv": "^4.2.2",
+        "symfony/maker-bundle": "^1.9.0",
+        "symfony/profiler-pack": "^1.0.4",
+        "symfony/test-pack": "^1.0.5",
+        "symfony/web-server-bundle": "^4.2.2"
     },
     "config": {
         "preferred-install": {
@@ -81,7 +87,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.1.*"
+            "require": "4.2.*"
         }
     }
 }
