--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -5,7 +5,12 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
+        "friendsofsymfony/rest-bundle": "^2.5.0",
+        "lexik/jwt-authentication-bundle": "^2.6.1",
+        "nelmio/api-doc-bundle": "^3.3.1",
         "sensio/framework-extra-bundle": "^5.2.4",
+        "sunra/php-simple-html-dom-parser": "^1.5.2",
         "symfony/asset": "^4.2.2",
         "symfony/browser-kit": "^4.2.2",
         "symfony/cache": "^4.2.2",
@@ -20,19 +25,14 @@
         "symfony/orm-pack": "^1.0.6",
         "symfony/process": "^4.2.2",
         "symfony/security-bundle": "^4.2.2",
-        "symfony/serializer": "^4.2.2",
+        "symfony/serializer": "4.2.*",
         "symfony/serializer-pack": "^1.0",
         "symfony/swiftmailer-bundle": "^3.2.2",
         "symfony/translation": "^4.2.2",
         "symfony/twig-bundle": "^4.2.2",
         "symfony/validator": "^4.2.2",
         "symfony/web-link": "^4.2.2",
-        "symfony/yaml": "^4.2.2",
-        "friendsofsymfony/rest-bundle": "^2.5.0",
-        "lexik/jwt-authentication-bundle": "^2.6.1",
-        "nelmio/api-doc-bundle": "^3.3.1",
-        "sunra/php-simple-html-dom-parser": "^1.5.2",
-        "ext-json": "*"
+        "symfony/yaml": "^4.2.2"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
