--- a/Backend/config/packages/security.yaml
+++ b/Backend/config/packages/security.yaml
@@ -26,6 +26,14 @@ security:
                 check_path:               /api/register_check
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
+        doc:
+            pattern:  ^/api/doc
+            stateless: true
+            anonymous: true
+        docs:
+            pattern:  ^/api/docs
+            stateless: true
+            anonymous: true
 
         api:
             pattern:   ^/api
@@ -50,6 +58,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/api/doc, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/docs, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
