--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -13,7 +13,6 @@
         "sensio/framework-extra-bundle": "^5.2.4",
         "sunra/php-simple-html-dom-parser": "^1.5.2",
         "symfony/asset": "^4.2.2",
-        "symfony/browser-kit": "^4.2.2",
         "symfony/cache": "^4.2.2",
         "symfony/config": "^4.2.2",
         "symfony/console": "^4.2.2",
@@ -38,11 +37,14 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "sensiolabs/security-checker": "^5.0",
+        "symfony/browser-kit": "4.2.*",
+        "symfony/css-selector": "4.2.*",
         "symfony/debug-pack": "^1.0.7",
         "symfony/dotenv": "^4.2.2",
         "symfony/maker-bundle": "^1.9.0",
+        "symfony/phpunit-bridge": "4.2.*",
         "symfony/profiler-pack": "^1.0.4",
-        "symfony/test-pack": "^1.0.5",
+        "symfony/test-pack": "^1.0",
         "symfony/web-server-bundle": "4.2.*"
     },
     "config": {
