--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "ext-json": "*",
         "api-platform/api-pack": "^1.2",
+        "doctrine/annotations": "^1.6",
         "friendsofsymfony/rest-bundle": "^2.5.0",
         "lexik/jwt-authentication-bundle": "^2.6.1",
         "nelmio/api-doc-bundle": "^3.4",
