--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -8,9 +8,10 @@
         "ext-json": "*",
         "api-platform/api-pack": "^1.2",
         "doctrine/annotations": "^1.6",
-        "friendsofsymfony/rest-bundle": "^2.5.0",
+        "friendsofsymfony/rest-bundle": "^2.5",
+        "jms/serializer": "2.2.*",
+        "jms/serializer-bundle": "3.2.*",
         "lexik/jwt-authentication-bundle": "^2.6.1",
-        "nelmio/api-doc-bundle": "^3.4",
         "sensio/framework-extra-bundle": "^5.2.4",
         "sunra/php-simple-html-dom-parser": "^1.5.2",
         "symfony/asset": "^4.2.2",
@@ -22,6 +23,7 @@
         "symfony/flex": "^1.1.8",
         "symfony/form": "^4.2.2",
         "symfony/framework-bundle": "^4.2.2",
+        "symfony/maker-bundle": "^1.11",
         "symfony/monolog-bundle": "^3.3.1",
         "symfony/orm-pack": "^1.0.6",
         "symfony/process": "^4.2.2",
@@ -42,7 +44,6 @@
         "symfony/css-selector": "4.2.*",
         "symfony/debug-pack": "^1.0.7",
         "symfony/dotenv": "^4.2.2",
-        "symfony/maker-bundle": "^1.9.0",
         "symfony/phpunit-bridge": "4.2.*",
         "symfony/profiler-pack": "^1.0.4",
         "symfony/test-pack": "^1.0",
