--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^7.2.0",
     "@angular/router": "^7.2.0",
     "core-js": "^2.6.2",
+    "jwt-decode": "^2.2.0",
     "npm": "^6.5.0",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.27"
