--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^7.2.0",
     "core-js": "^2.6.2",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "npm": "^6.5.0",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.27"
