--- a/Backend/config/packages/security.yaml
+++ b/Backend/config/packages/security.yaml
@@ -8,6 +8,14 @@ security:
             entity:
                 class: App\Entity\User
                 property: username
+    role_hierarchy:
+        ROLE_ADMIN: IS_AUTHENTICATED_FULLY
+        ROLE_WARDEN: [ROLE_EXECUTIONER, ROLE_SOCIAL, ROLE_MEDICAL, ROLE_PRISON_GUARD, ROLE_MANAGER, ROLE_USER]
+        ROLE_MANAGER: [ROLE_USER]
+        ROLE_EXECUTIONER: [ROLE_PRISON_GUARD, ROLE_USER]
+        ROLE_SOCIAL: ROLE_USER
+        ROLE_MEDICAL: ROLE_USER
+        ROLE_PRISON_GUARD: ROLE_USER
     firewalls:
         login:
             pattern:  ^/api/login
@@ -38,6 +46,7 @@ security:
         api:
             pattern:   ^/api
             stateless: true
+            access_denied_handler: App\Security\AccessDeniedHandler
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
@@ -61,8 +70,8 @@ security:
         - { path: ^/api/doc, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/docs, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/prisoner,       roles: ROLE_PRISON_GUARD }
+#        - { path: ^/api/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: ^/api/prisoner,       roles: ROLE_PRISON_GUARD }
         - { path: ^/api,       roles: ROLE_USER }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
