change menu navbar

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .idea/
 /.idea/
-./idea/*
+idea/*
 package-lock.json
-./Backend/composer.lock
-./Frontend/package-lock.json*
+Backend/composer.lock
+Frontend/package-lock.json*
 /Backend/public/upload/
