--- a/Backend/config/packages/security.yaml
+++ b/Backend/config/packages/security.yaml
@@ -34,6 +34,10 @@ security:
                 check_path:               /api/register_check
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
+        application:
+            pattern:  ^/api/application
+            stateless: true
+            anonymous: true
         doc:
             pattern:  ^/api/doc
             stateless: true
@@ -71,6 +75,7 @@ security:
         - { path: ^/api/docs, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/application, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 #        - { path: ^/api/prisoner,       roles: ROLE_PRISON_GUARD }
         - { path: ^/api,       roles: ROLE_USER }
         # - { path: ^/admin, roles: ROLE_ADMIN }
