--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.6.9",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "ng-pick-datetime": "^7.0.0",
     "node-sass": "^4.12.0",
     "npm": "^6.5.0",
     "rxjs": "^6.3.3",
